# SGpp

./: CMakeLists.txt  GarfieldDetector.cc  Gas-Gpp.tar.xz  README.md  comp.sh  comp.sub  mkd.sh  rmd.sh
Dados/2.2.2022/: AvaPEle.txt  EEnerPos.txt  EleEner.txt  ElePPhot.txt  ElePos.txt
Dados/3.2.2022/: AvaPEle.txt  EEnerPos.txt  EleEner.txt  ElePos.txt
Dados/4.2.2022/: AvaPEle.txt  AvaTot.txt  EEnerPos.txt  EleEner.txt  ElePPhot.txt  ElePos.txt
source/: CMakeLists.txt  Constantes.hh  GarfieldDetector.cc
